nearby rides fix
